# autoresearch-classifier

./: .gitignore  README.md  REPORT.md  analysis.ipynb  core.md  data.md  prepare.py  program.md  publish.py  pyproject.toml  requirements.txt  train.py
space/: README.md  app.py  requirements.txt
